# elitwilson.github.io

./: Cargo.toml  README.md  Trunk.toml  index.html
.artifacts/etwilson/epics/: 001-particle-effects-system.md  002-about-screen.md
.artifacts/etwilson/runs/001-text-map-format/: decisions.md  review-notes.md
.artifacts/etwilson/runs/002-poll-loop-conversion/: review-notes.md
.artifacts/etwilson/runs/008-intro-menu/: decisions.md  review-notes.md
.artifacts/etwilson/runs/009-bios-about-screen/: decisions.md  review-notes.md
.artifacts/etwilson/runs/epic-001-particle-effects/: decisions.md  review-notes.md
.artifacts/etwilson/specs/: 001-text-map-format.md  003-particle-system-core.md  004-effects-layer-fireworks.md  005-particle-rendering.md  006-sandbox-screen.md  008-intro-menu.md  009-bios-about-screen.md
.artifacts/etwilson/stories/: 001-particle-system-core.md  002-effects-layer-fireworks.md  003-particle-rendering.md  004-sandbox-screen.md  005-bios-about-screen.md
.github/workflows/: deploy.yml
assets/: castle.map
src/: about.rs  app.rs  block_font.rs  effects.rs  input.rs  main.rs  map.rs  menu.rs  particle_render.rs  render.rs  rng.rs  router.rs  sandbox.rs  theme.rs  victory.rs  web.rs
src/effects/: tests.rs
src/particle_render/: tests.rs
src/rng/: tests.rs
